修改图片资源文件路径

--- a/_posts/2019-3-10 -WCF服务部署使用步骤及注意事项.md
+++ b/_posts/2019-3-10 -WCF服务部署使用步骤及注意事项.md
@@ -4,23 +4,23 @@
 --------------------
 
 1、启用 Windows 功能  
-![](WCF服务部署步骤2019年1月14日.files/WCF服务部署步骤.png)  
+![](WCF服务部署步骤.files/WCF服务部署步骤.png)  
 Windows Communication Foundation 非HTTP激活 （必选）  
 WCF服务（必选）  
 Internet Information Services （必选）【具体需要安装的功能，暂不明确，建议全部安装】
 
 2、启动 Windows 服务  
-![](WCF服务部署步骤2019年1月14日.files/WCF服务部署步骤2019年1月14日162.png)  
+![](WCF服务部署步骤.files/WCF服务部署步骤162.png)  
 Net.Tcp  Listener Adapter 服务启动（必须）  
 Net.Tcp Port Sharing Service 服务启动(必须)
 
 3、IIS配置
 
 (1)网站绑定中添加net.tcp 类型绑定 例如：8044:*  
-![](WCF服务部署步骤2019年1月14日.files/WCF服务部署步骤2019年1月14日273.png)
+![](WCF服务部署步骤.files/WCF服务部署步骤273.png)
 
 (2)高级设置-已启用的协议 添加net.tcp 例如：http,net.tcp  
-![](WCF服务部署步骤2019年1月14日.files/WCF服务部署步骤2019年1月14日313.png)
+![](WCF服务部署步骤.files/WCF服务部署步骤313.png)
 
 4、以下是开发中需要注意的事项
 
@@ -29,18 +29,18 @@ Net.Tcp Port Sharing Service 服务启动(必须)
 ①VS 要已管理员身份启动
 
 1)点击调试附加到进程  
-![](WCF服务部署步骤2019年1月14日.files/WCF服务部署步骤2019年1月14日368.png)
+![](WCF服务部署步骤.files/WCF服务部署步骤368.png)
 
 2)项目启动后附加进程  
 勾选 显示所有用户进程  
 选择w3wp.exe  
 点击附加  
-![](WCF服务部署步骤2019年1月14日.files/WCF服务部署步骤2019年1月14日410.png)
+![](WCF服务部署步骤.files/WCF服务部署步骤410.png)
 
 5、服务引用配置文件注意事项  
 如果是子项目中应用了WCF 服务，需要将在APP.config 文件中生产的 客户端配置，同样添加到主项目的app.config 配置文件中。  
 例如：我在 BHIS.BasicSetting项目中引用了WCF服务，需要将 生产的客户端配置同时添加到  
 Gsww.BCHIS（主）项目的app.config 配置文件中  
-![](WCF服务部署步骤2019年1月14日.files/WCF服务部署步骤2019年1月14日584.png)  
+![](WCF服务部署步骤.files/WCF服务部署步骤584.png)  
 官方说明  
-![](WCF服务部署步骤2019年1月14日.files/WCF服务部署步骤2019年1月14日591.png)
+![](WCF服务部署步骤.files/WCF服务部署步骤591.png)
