--- a/_posts/2018-10-19-网站搭建记录.md
+++ b/_posts/2018-10-19-网站搭建记录.md
@@ -36,3 +36,8 @@ key: 20181019
 <https://tianqi.name/jekyll-TeXt-theme/docs/zh/quick-start>
 
 这是使用的TeXt主题项目的中文文档
+
+最后本地进行编译生成查看是否合适
+{% highlight ruby linenos %}
+bundle exec jekyll server
+{% endhighlight ruby %}
