图片路径修改

--- a/_posts/2019-03-10-Nginx.md
+++ b/_posts/2019-03-10-Nginx.md
@@ -7,25 +7,8 @@ key: 20190310
 **Nginx使用帮助文档**
 ---------------
 
-nginx -s stop
 
-fast shutdown快速关机
-
-nginx -s quit
-
-graceful shutdown优雅的关机
-
-nginx -s reload
-
-changing configuration, starting new worker processes with a new configuration, graceful shutdown of old worker processes
-
-更改配置, 使用新配置启动新的工作进程, 正常关闭旧的工作进程
-
-nginx -s reopen
-
-re-opening log files
-
-重新打开日志文件
+![]({{ "/assets/images/Nginx1.png" | absolute_url }})
 
 Tpc 负载均衡添加配置部分
 
