新增 2019-08-21-GridLookUpEdit多列模糊查询

--- a/_posts/2018-11-12-评论配置.md
+++ b/_posts/2018-11-12-评论配置.md
@@ -25,8 +25,8 @@ comments:
       - "the-other-admin-github-id"
 {% endhighlight ruby %}
 
-clientID、clientSecret 这两个参数不用再过多的解释，这两个数据就是你申请的应用后的参数，很明确
+clientID、clientSecret 这两个参数不用再过多的解释，就是你申请的应用后的参数，很明确
 
-repository 这个参数是我一开始一致填写错误的，这名称不是指你为了评论创建的应用名称，而是你网站所在的GIT的项目名称。例如：meng8023.github.io
+repository 这个参数是我一开始一直填写错误的，参数不是指你为了评论创建的应用名称，而是你网站所在的GIT的项目名称。例如：meng8023.github.io
 
 owner、admin 在这里直接填写你在GIT上的账号名称就好.例如：meng8023
